[package]
name = "prime_pmpt"
version = "0.1.0"
edition = "2021"

[dependencies]
rand = "0.8"
rand_chacha = "0.3"
rand_distr = "0.4"
sha3 = "0.10"
thiserror = "1.0"
num-bigint = { version = "0.4", features = ["serde","rand"] }
num-traits = "0.2"
num-integer = "0.1.46"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
hex = "0.4"
pem = "1.0"
clap = { version = "4.3.10", features = ["derive"] }
rayon = "1.5"
log = "0.4"
env_logger = "0.9"
primal = "0.3"
zeroize = "1.0"
base64 = "0.21"
